# datasheetminer

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_VALUES.md  CLI_README.md  COSTS.md  FUTURE.md  HISTORY.md  LICENSE  Quickstart  README.md  SCHEMA.md  app.py  digitax_hd_products.json  get_dynamodb_schema.py  iam-ci-policy.json  main.py  mpp_out.json  mpp_outreal.json  mpp_products.json  myinput.json  output.json  output_250928.json  pyproject.toml  pytest.ini  samconfig.toml  schema.json  template.yaml  urls.json
.cursor/rules/: best-practice.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  security.yml  staging.yml
admin/: blacklist.json
app/: .dockerignore  .env.example  .gitignore  Dockerfile  FILTER_GUIDE.md  FILTER_IMPLEMENTATION.md  QUICKSTART_FILTERS.md  README.md  deploy-aws.sh  deploy.sh  package-lock.json  package.json
app/backend/: eslint.config.js  jest.config.js  package.json
app/frontend/: COLOR_SCHEME.md  FINAL_SUMMARY.md  IMPROVEMENTS.md  MOBILE_CONNECTIVITY.md  PERFORMANCE.md  eslint.config.js  index.html  package.json  vite.config.ts
app/infrastructure/: cdk.context.json  package.json  tsconfig.json
cli/: EXAMPLE.md  README.md  admin.py  agent.py  audit_dedupes.py  audit_units.py  batch_process.py  batch_servo_drives.py  batch_servo_motors.py  batch_servo_systems.py  bench.py  bench_compare.py  godmode.py  ingest_report.py  ingest_tolomatic.py  inspect_datasheet.py  intake.py  intake_guards.py  migrate_electric_cylinders.py  migrate_units_to_dict.py  price_enrich.py  processor.py  query.py  quickstart.py  schemagen.py  triage.py  units_triage.py
datasheetminer/: README.md  __init__.py  __main__.py  app.py  async_handler.py  config.py  database.py  gemini.py  ids.py  ingest_log.py  llm.py  llm_anthropic.py  management.py  mapper.py  merge.py  miner.py  page_finder.py  placeholders.py  quality.py  requirements.txt  scraper.py  searcher.py  spec_rules.py  units.py  utils.py
datasheetminer/api/: app.py
datasheetminer/db/: deleter.py  dynamo.py  pusher.py  query.py
datasheetminer/integration/: __init__.py  adapters.py  compat.py  ports.py
datasheetminer/mcp/: requirements.txt  samconfig.toml  template.yaml
datasheetminer/models/: README.md  __init__.py  base.py  common.py  component.py  contactor.md  contactor.py  csv_schema.py  datasheet.py  drive.md  drive.py  electric_cylinder.py  factory.py  gearhead.md  gearhead.py  linear_actuator.py  llm_schema.py  manufacturer.py  motor.py  product.py  robot_arm.py
datasheetminer/pricing/: __init__.py  extract.py  fetch.py  resolver.py
datasheetminer/schemagen/: __init__.py  llm.py  meta_schema.py  prompt.py  renderer.py
docs/: index.html  logos.html
examples/: mcp_integration.py
rust/: .dockerignore  Cargo.toml  Dockerfile
rust/.github/workflows/: ci.yml
rust/crates/datasheetminer/: Cargo.toml
rust/crates/datasheetminer/src/: main.rs
rust/crates/datasheetminer/src/cli/: deduplicate.rs  delete.rs  mod.rs  push.rs  query.rs  scrape.rs  search.rs
rust/crates/datasheetminer/src/server/: mod.rs  response.rs  state.rs
rust/crates/datasheetminer/src/server/pages/: datasheets.rs  filters.rs  management.rs  mod.rs  products.rs
rust/crates/datasheetminer/src/server/routes/: datasheets.rs  health.rs  mod.rs  products.rs
rust/crates/datasheetminer/templates/: base.html  datasheet_rows.html  datasheets.html  management.html  product_detail.html  product_table.html  products.html  style.css
rust/crates/db/: Cargo.toml
rust/crates/db/src/: client.rs  error.rs  lib.rs  serialize.rs
rust/crates/llm/: Cargo.toml
rust/crates/llm/src/: error.rs  gemini.rs  lib.rs
rust/crates/models/: Cargo.toml
rust/crates/models/src/: common.rs  datasheet.rs  drive.rs  error.rs  gearhead.rs  lib.rs  manufacturer.rs  motor.rs  product.rs  robot_arm.rs
rust/crates/quality/: Cargo.toml
rust/crates/quality/src/: lib.rs
rust/crates/scraper/: Cargo.toml
rust/crates/scraper/src/: detect.rs  lib.rs  pdf.rs  web.rs
rust/crates/searcher/: Cargo.toml
rust/crates/searcher/src/: brave.rs  duckduckgo.rs  filter.rs  lib.rs
rust/crates/specodex-api/src/routes/: datasheets.rs
rust/crates/units/: Cargo.toml
rust/crates/units/src/: lib.rs
rust/docs/: index.html
scripts/: cleanup_semicolon_legacy.py  delete_all_items.py  delete_by_product_type.py  delete_duplicates.py  gen_types.py  migrate_product_types.py  promote-admin.sh  reingest_contactors.py  rename_legacy_fields.py  resurrect-orphan-table.sh
scripts/migrations/: 2026-04-26-batch_process.py
specodex/: README.md  config.py  extract.py  ids.py  llm.py  mapper.py  merge.py  page_finder.py  quality.py  scraper.py  spec_rules.py  units.py  utils.py  web_scraper.py
specodex/admin/: __init__.py  blacklist.py  operations.py
specodex/db/: README.md  dynamo.py  pusher.py  query.py
specodex/integration/: __init__.py  (+3 more)
stripe/: .env.example  Cargo.toml  README.md
stripe/src/: checkout.rs  config.rs  db.rs  main.rs  models.rs  usage.rs  webhook.rs
stripe_py/: README.md  pyproject.toml
stripe_py/src/billing/: checkout.py  config.py  db.py  handler.py  models.py  router.py  usage.py  webhook.py
stripe_py/tests/: conftest.py  test_checkout.py  test_config.py  test_db.py  test_handler.py  test_models.py  test_router.py  test_usage.py  test_webhook.py
tests/: COVERAGE.md  README.md  conftest.py  fixtures.py  test_cli.py
todo/: ACTUATOR.md  API.md  AUTH.md  CICD.md  CONVERSION.md  DEDUPE.md  FRONTEND_TESTING.md  GODMODE.md  INTEGRATION.md  LOG_FEEDBACK.md  MANUAL_UPDATES.md  MARKETING.md  MODELGEN.md  NA-filter.md  PHASE5_RECOVERY.md  PYTHON_BACKEND.md  PYTHON_STRIPE.md  README.md  REBRAND.md  REFACTOR.md  RUST_ONE.md  SEO.md  STYLE.md  UNITS.md  USER.md  VISUALIZATION.md  benchmark-format-diversity.md  dependency-cleanup.md  edge-case-hardening.md  embeddings-for-dedup.md  enhance-intake-triage-guards.md  fundamental-flaws.md  monetization-plan.md  token-reduction-plan.md  usage-driven-schema-evolution.md
webscraper/: README.md  browser.py  scraper.py
(+260 files in other folders)
