[workspace]
resolver = "2"
members = [
    "crates/models",
    "crates/units",
    "crates/quality",
    "crates/db",
    "crates/llm",
    "crates/scraper",
    "crates/searcher",
    "crates/datasheetminer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
phf = { version = "0.11", features = ["macros"] }
aws-config = "1"
aws-sdk-dynamodb = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
axum = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
regex = "1"
askama = "0.13"

# Internal crates
dsm-models = { path = "crates/models" }
dsm-units = { path = "crates/units" }
dsm-quality = { path = "crates/quality" }
dsm-db = { path = "crates/db" }
dsm-llm = { path = "crates/llm" }
dsm-scraper = { path = "crates/scraper" }
dsm-searcher = { path = "crates/searcher" }
