[package]
name = "datasheetminer-payments"
version = "0.1.0"
edition = "2021"

[dependencies]
# Lambda runtime
lambda_http = "0.13"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["full"] }

# Stripe
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper-rustls"] }

# AWS
aws-sdk-dynamodb = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
