[project]
name = "datasheetminer-billing"
version = "0.1.0"
description = "Stripe metered-billing Lambda for DatasheetMiner (test mode)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stripe>=12.0.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.40.0",
]

[dependency-groups]
dev = [
    "moto[dynamodb]>=5.1.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
