[package]
name = "datasheetminer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dsm-models = { workspace = true }
dsm-units = { workspace = true }
dsm-quality = { workspace = true }
dsm-db = { workspace = true }
dsm-llm = { workspace = true }
dsm-scraper = { workspace = true }
dsm-searcher = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
askama = { workspace = true }
