[package]
name = "dsm-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dsm-models = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
