[package]
name = "dsm-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dsm-models = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
